--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
     <link rel="manifest" href="/manifest.json" />
 
     <link rel="shortcut icon" type="image/png" href="/icon.png" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Pacifico&family=Playball&family=Sixtyfour+Convergence&display=swap"
+      rel="stylesheet"
+    />
+
+    
   </head>
   <body>
     <div id="root"></div>
